--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -13,3 +13,6 @@ typing_extensions==4.14.1
 uvicorn==0.35.0
 SQLAlchemy==2.0.25
 asyncpg==0.28.0
+pydantic[email]==2.11.7
+PyJWT==2.8.0
+passlib[bcrypt]==1.7.4
