--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -17,3 +17,7 @@ pydantic[email]==2.11.7
 PyJWT==2.8.0
 passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
+pytest==7.4.0
+pytest-asyncio==0.21.0
+pytest-cov==4.1.0
+pytest-mock==3.10.0
