--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,8 +1,6 @@
 annotated-types==0.7.0
-anyio==4.9.0
 click==8.2.1
 fastapi==0.116.1
-h11==0.16.0
 idna==3.10
 pydantic==2.11.7
 pydantic_core==2.33.2
@@ -10,14 +8,26 @@ sniffio==1.3.1
 starlette==0.47.2
 typing-inspection==0.4.1
 typing_extensions==4.14.1
-uvicorn==0.35.0
+uvicorn==0.22.0
 SQLAlchemy==2.0.25
 asyncpg==0.28.0
 pydantic[email]==2.11.7
 PyJWT==2.8.0
 passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
+
+# HTTPX ecosystem (compatible versions)
+httpx==0.23.3
+httpcore==0.15.0
+
+# Testing
 pytest==7.4.0
 pytest-asyncio==0.21.0
 pytest-cov==4.1.0
 pytest-mock==3.10.0
+pytest-httpx
+aiosqlite
+
+# DB Migration utils
+alembic==1.11.0
+sqlalchemy-utils==0.37.8
